--- a/ressources/sass/layout/_projets.scss
+++ b/ressources/sass/layout/_projets.scss
@@ -45,4 +45,58 @@
 	color: $gris25;
 	margin: 1rem 0;
   }
+
+  &__processus {
+	list-style-type: none;
+	padding: 0;
+	margin-bottom: 7rem;
+  }
+
+  &__formats {
+	padding: 1rem 4rem 1rem 0;
+
+	@media screen and (min-width: $mobile600px) {
+	  display: inline-block;
+	}
+
+	.lien {
+	  font-family: $RobotoMedium;
+	  text-decoration: none;
+
+	  &::before {
+		content: "";
+		display: inline-block;
+		width: 3.5rem;
+		height: 5rem;
+		vertical-align: middle;
+		margin-top: -0.5rem;
+		padding-right: 1rem;
+		background-repeat: no-repeat;
+		transition: all, 0.1s ease-in-out;
+	  }
+
+	  &:link, &:visited {
+		color: $gris25;
+	  }
+
+	  &:hover, &:active {
+		color: $noir;
+		text-decoration: underline;
+	  }
+	}
+
+	.web {
+
+	  &::before {
+		background-image: url(../images/icones/icone-defaut.svg);
+	  }
+
+	  &:hover, &:active {
+
+		&::before {
+		  background-image: url(../images/icones/icone-hover.svg);
+		}
+	  }
+	}
+  }
 }
