--- a/ressources/sass/utilitaires/_mixins.scss
+++ b/ressources/sass/utilitaires/_mixins.scss
@@ -97,12 +97,11 @@
 }
 
 // Mixin pour rangée Grid sur 12 colonnes
-// Elle sert autant sur mobile (au besoin) que pour la version desktop
-@mixin rangeeGrid12col($gridGap: 20px) {
-  @media (min-width: $mobile600px) {
+@mixin rangeeGrid12col($pointRupture: $mobile600px) {
+  @media (min-width: $pointRupture) {
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
-	column-gap: $gridGap;
+	column-gap: 20px;
   }
 }
 
